--- a/index.html
+++ b/index.html
@@ -23,6 +23,7 @@
     <!-- Vendor CSS Files -->
     <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap@4.0.0/dist/css/bootstrap.min.css"
         integrity="sha384-Gn5384xqQ1aoWXA+058RXPxPg6fy4IWvTNh0E263XmFcJlSAwiGgFAW/dAiS6JXm" crossorigin="anonymous">
+    <script src="https://kit.fontawesome.com/3f702e0d71.js" crossorigin="anonymous"></script>
     <link href="assets/vendor/aos/aos.css" rel="stylesheet">
     <link href="assets/vendor/bootstrap/css/bootstrap.min.css" rel="stylesheet">
     <link href="assets/vendor/bootstrap-icons/bootstrap-icons.css" rel="stylesheet">
@@ -30,6 +31,9 @@
     <link href="assets/vendor/glightbox/css/glightbox.min.css" rel="stylesheet">
     <link href="assets/vendor/swiper/swiper-bundle.min.css" rel="stylesheet">
     <link href="assets/css/style.css" rel="stylesheet">
+    <link rel="stylesheet" href="./style.css">
+    <!-- Swiper link -->
+    <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/swiper@9/swiper-bundle.min.css" />
 </head>
 
 <body>
@@ -57,31 +61,34 @@
     <section id="hero">
         <div class="container-fluid">
             <div class="row d-flex align-items-center">
-        <div id="carouselExampleControls" class="carousel slide p-0 carousel-fade" data-ride="carousel">
-                <div class="carousel-inner" role="listbox">
-                    <div class="carousel-item active">
-                        <div class="img"><img class="d-block w-100 img-fluid" src="images/ban.jpg" alt="First slide">
+                <div id="carouselExampleControls" class="carousel slide p-0 carousel-fade" data-ride="carousel">
+                    <div class="carousel-inner" role="listbox">
+                        <div class="carousel-item active">
+                            <div class="img"><img class="d-block w-100 img-fluid" src="images/ban.jpg"
+                                    alt="First slide">
+                            </div>
+                        </div>
+                        <div class="carousel-item">
+                            <div class="img"><img class="d-block w-100 img-fluid" src="images/ban1.jpg"
+                                    alt="Second slide">
+                            </div>
+                        </div>
+                        <div class="carousel-item">
+                            <div class="img"><img class="d-block w-100 img-fluid" src="images/ban2.jpg"
+                                    alt="Third slide">
+                            </div>
                         </div>
                     </div>
-                    <div class="carousel-item">
-                        <div class="img"><img class="d-block w-100 img-fluid" src="images/ban1.jpg" alt="Second slide">
-                        </div>
-                    </div>
-                    <div class="carousel-item">
-                        <div class="img"><img class="d-block w-100 img-fluid" src="images/ban2.jpg" alt="Third slide">
-                        </div>
-                    </div>
+                    <a class="carousel-control-prev" href="#carouselExampleControls" role="button" data-slide="prev">
+                        <span class="carousel-control-prev-icon" aria-hidden="true"></span>
+                        <span class="sr-only">Previous</span>
+                    </a>
+                    <a class="carousel-control-next" href="#carouselExampleControls" role="button" data-slide="next">
+                        <span class="carousel-control-next-icon" aria-hidden="true"></span>
+                        <span class="sr-only">Next</span>
+                    </a>
                 </div>
-                <a class="carousel-control-prev" href="#carouselExampleControls" role="button" data-slide="prev">
-                    <span class="carousel-control-prev-icon" aria-hidden="true"></span>
-                    <span class="sr-only">Previous</span>
-                </a>
-                <a class="carousel-control-next" href="#carouselExampleControls" role="button" data-slide="next">
-                    <span class="carousel-control-next-icon" aria-hidden="true"></span>
-                    <span class="sr-only">Next</span>
-                </a>
             </div>
-        </div>
         </div>
     </section><!-- End Hero -->
 
@@ -152,30 +159,32 @@
 
                 <div class="row pt-5">
                     <div class="col-md-3 mx-auto d-flex" data-aos="fade-right">
-                        <div class="card">
+                        <div class="card mx-auto">
                             <div class="card-body ml-1" style="width: 18rem;">
                                 <div class="card-img">
-                                  <a href=""><img src="./images/jobs.png" alt="..." class="img-fluid"></a>
+                                    <a href=""><img src="./images/jobs.png" alt="..." class="img-fluid"></a>
                                 </div>
                             </div>
-                            <h5 class="card-title mt-2 ml-4 "><a href="">Jobs</a></h5>
+                            <h5 class="card-title mt-2 ml-2"><a href="">Jobs</a></h5>
                         </div>
                     </div>
                     <div class="col-md-3 mx-auto d-flex">
-                        <div class="card">
+                        <div class="card mx-auto">
                             <div class="card-body ml-1" style="width: 18rem;">
                                 <div class="card-img">
-                                 <a href=""><img src="./images/Internships.png" alt="..." class="img-fluid" width="200px" height="180px"></a>
+                                    <a href="./internships.html"><img src="./images/Internships.png" alt="..."
+                                            class="img-fluid" width="200px" height="180px"></a>
                                 </div>
                             </div>
-                            <h5 class="card-title mt-2 ml-5"><a href="">Internships</a></h5>
+                            <h5 class="card-title mt-2 ml-5"><a href="./internships.html">Internships</a></h5>
                         </div>
                     </div>
                     <div class="col-md-3 mx-auto d-flex" data-aos="fade-left">
-                        <div class="card">
+                        <div class="card mx-auto">
                             <div class="card-body ml-1" style="width: 18rem;">
                                 <div class="card-img">
-                                    <a href="./Consultancy.html"><img src="./images/Consultancy.avif" alt="..." class="img-fluid"></a>
+                                    <a href="./Consultancy.html"><img src="./images/Consultancy.avif" alt="..."
+                                            class="img-fluid"></a>
                                 </div>
                             </div>
                             <h5 class="card-title mt-2 ml-5"><a href="./Consultancy.html">Consultancy</a></h5>
@@ -185,6 +194,91 @@
 
             </div>
         </section><!-- End Services Section -->
+        <!--------------------------- Review cards -------------------------------->
+        <main class="section-bg">
+            <div class="section-title pt-5">
+                <h4 data-aos="fade-in">Top Reviews</h4>
+            </div>
+
+            <div class="swiper mySwiper rounded">
+                <div class="swiper-wrapper">
+
+                    <div class="swiper-slide">
+                        <div class="swiper-img mx-auto">
+                            <img src="D:\DSC_3956.JPG" alt="">
+                        </div>
+                        <div class="text-center mx-auto">
+                            <span class="fw-bold fs-3">Web Developer<br></span>
+                            <span class="fw-bold text-success fs-4">Jaya Aditya</span>
+                            <p class="mt-2">Hello Everyone. This is Jayaaditya from Machilipatnam.</p>
+                            <div class="icon shadow rounded">
+                                <a><i class="bi-star-fill"></i></a>
+                                <a><i class="bi-star-fill"></i></a>
+                                <a><i class="bi-star-fill"></i></a>
+                                <a><i class="bi-star-fill"></i></a>
+                                <a><i class="bi-star-fill"></i></a>
+                                
+                            </div>
+                        </div>
+                    </div>
+
+                    <div class="swiper-slide">
+                        <div class="swiper-img mx-auto"><img src="D:\DSC_3956.JPG" alt=""></div>
+                        <div class="text-center">
+                            <span class="fw-bold fs-3">Web Developer<br></span>
+                            <span class="fw-bold text-success fs-4">Jaya Aditya</span>
+                            <p class="mt-1">Hello Everyone. This is Jayaaditya from Machilipatnam.</p>
+                            <div class="icon shadow rounded">
+                                <a><i class="bi-star-fill"></i></a>
+                                <a><i class="bi-star-fill"></i></a>
+                                <a><i class="bi-star-fill"></i></a>
+                                <a><i class="bi-star-fill"></i></a>
+                                <a><i class="bi-star-fill"></i></a>
+                            </div>
+                        </div>
+                    </div>
+
+                    <div class="swiper-slide">
+                        <div class="swiper-img mx-auto">
+                            <img src="D:\DSC_3956.JPG" alt="">
+                        </div>
+                        <div class="text-center">
+                            <span class="fw-bold fs-3">Web Developer <br></span>
+                            <span class="fw-bold text-success fs-4">Jaya Aditya</span>
+                            <p class="mt-1"> Hello Everyone. This is Jayaaditya from Machilipatnam.</p>
+                            <div class="icon shadow rounded">
+                                <a><i class="bi-star-fill"></i></a>
+                                <a><i class="bi-star-fill"></i></a>
+                                <a><i class="bi-star-fill"></i></a>
+                                <a><i class="bi-star-fill"></i></a>
+                                <a><i class="bi-star-fill"></i></a>
+                            </div>
+                        </div>
+                    </div>
+
+                    <div class="swiper-slide">
+                        <div class="swiper-img mx-auto">
+                            <img src="D:\DSC_3956.JPG" alt="">
+                        </div>
+                        <div class="text-center">
+                            <span class="fw-bold fs-3">Web Developer <br></span>
+                            <span class="fw-bold text-success fs-4">Jaya Aditya</span>
+                            <p class="mt-1">Hello Everyone. This is Jayaaditya from Machilipatnam.</p>
+                            <div class="icon shadow rounded">                              
+                                <a><i class="bi-star-fill"></i></a>
+                                <a><i class="bi-star-fill"></i></a>
+                                <a><i class="bi-star-fill"></i></a>
+                                <a><i class="bi-star-fill"></i></a>
+                                <a><i class="bi-star-fill"></i></a>
+                            </div>
+                        </div>
+                    </div>
+                </div>
+                <div class="swiper-pagination pb-2"></div>
+            </div>
+        </main>
+        <!------------------------------------------------------------------------->
+
 
         <!-- ======= Features Section ======= -->
         <section id="features" class="features section-bg">
@@ -254,10 +348,10 @@
                                     placeholder="Subject" required>
                             </div>
                             <div class="form-group mt-3">
-                                <textarea class="form-control" name="Message" rows="5" placeholder="Message"
+                                <textarea class="form-control" name="Message" rows="4" placeholder="Message"
                                     required></textarea>
                             </div>
-                            
+
 
 
                             <div class="text-center"><button type="submit">Send Message</button></div>
@@ -314,6 +408,7 @@
     <script src="assets/js/main.js"></script>
 
     <script src="./script.js"></script>
+    <script src="https://cdn.jsdelivr.net/npm/swiper@9/swiper-bundle.min.js"></script>
 </body>
 
 </html>
