--- a/internships.html
+++ b/internships.html
@@ -4,7 +4,7 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Internship | Services</title>
+    <title>Internships | Services</title>
 
     <link rel="shortcut icon" type="image/x-icon" href="images/favicon.ico">
     <link href="assets/img/apple-touch-icon.png" rel="apple-touch-icon">
@@ -21,6 +21,7 @@
     <link href="assets/vendor/swiper/swiper-bundle.min.css" rel="stylesheet">
     <link href="assets/css/style.css" rel="stylesheet">
     <link rel="stylesheet" href="./internships.css">
+    <link rel="stylesheet" href="./index.html">
 
     <script src="./internships.js"></script>
 </head>
@@ -33,10 +34,19 @@
             </div>
             <nav class="navbar" id="navbar">
                 <ul>
-                    <li><a href="#" class="nav-link scrollto active">Home</a></li>
-                    <li><a href="#" class="nav-link scrollto">About Us</a></li>
-                    <li><a href="#" class="nav-link scrollto">Servces</a></li>
-                    <li><a href="#" class="nav-link scrollto">Contact</a></li>
+                    <li><a href="./index.html" class="nav-link scrollto active">Home</a></li>
+                    <li><a href="./about.html" class="nav-link scrollto">About Us</a></li>
+                    <li class="nav-item dropdown"><a class="nav-link dropdown-toggle" href="#" role="button"
+                            data-bs-toggle="dropdown" aria-expanded="false">
+                            Sevices
+                        </a>
+                        <ul class="dropdown-menu">
+                            <li><a class="dropdown-item" href="./jobs.html">Jobs</a></li>
+                            <li><a class="dropdown-item" href="#">Internships</a></li>
+                            <li><a class="dropdown-item" href="./Technology.html">Technology</a></li>
+                        </ul>
+                    </li>
+                    <li><a href="./contact.html" class="nav-link scrollto">Contact</a></li>
                     <li><a href="#" class="getstarted scrollto">Get Started</a></li>
                 </ul>
                 <i class="bi bi-list mobile-nav-toggle"></i>
@@ -45,27 +55,61 @@
     </header>
     <!-----------------------JS Slider -------------------------->
 
-    <div><img name="slide" width="100%" height="500"></div>
+    <!-- <div class="position-relative">
+        <img name="slide" width="100%" height="500" class="img-fluid">
+        <div class="carousel-indicators">
+            <button type="button" data-bs-target="#carouselExampleDark" data-bs-slide-to="0" class="active" aria-current="true" aria-label="Slide 1" onclick="prev()"></button>
+            <button type="button" data-bs-target="#carouselExampleDark" data-bs-slide-to="1" aria-label="Slide 2"onclick="next()"></button>
+        </div>
+    </div> -->
 
-    <div id="img-prev">
-           <button class="btn btn1" onclick="prev()">&#10094;</button>
-    </div>
-    <div id="img-next">
-        <button class="btn btn1" onclick="next()">&#10095;</button>
-    </div>
-
-    <!-----------------------JS Slider-------------------------->
-
-
-<!----------------------Application form------------------------>
-    <section>
-        <form action="" class="w-50 mx-auto shadow-lg border border-black">
-
-            <div class="application">
-                <p>Application Form</p>
+    <div id="carouselExampleControls" class="carousel slide p-0 carousel-fade" data-ride="carousel">
+        <div class="carousel-inner" role="listbox">
+            <div class="carousel-item active">
+                <div class="img">
+                    <img src="./images/Intern1.png" class="d-block w-100 img-fluid" alt="...">
+                </div>
             </div>
 
-            <div class="row mb-4">
+            <div class="carousel-item">
+                <div class="img">
+                    <img src="./images/Intern2.jpg" class="d-block w-100 img-fluid" alt="...">
+                </div>
+            </div>
+
+            <div class="carousel-item">
+                <div class="img">
+                    <img src="./images/Intern3.png" class="d-block w-100 img-fluid" alt="...">
+                </div>
+            </div>
+
+            <div class="carousel-item">
+                <div class="img">
+                    <img src="./images/Intern4.webp" class="d-block w-100 img-fluid" alt="...">
+                </div>
+            </div>
+        </div>
+        
+        <a class="carousel-control-prev" data-bs-target="#carouselExampleControls" data-bs-slide="prev" role="button">
+            <span class="carousel-control-prev-icon" aria-hidden="true"></span>
+            <span class="sr-only">Previous</span>
+        </a>
+        <a class="carousel-control-next" data-bs-target="#carouselExampleControls" data-bs-slide="next" role="button">
+            <span class="carousel-control-next-icon" aria-hidden="true"></span>
+            <span class="sr-only">Next</span>
+        </a>
+    </div>
+
+
+    <!----------------------Application form------------------------>
+    <section class="section-bg">
+        <form action="" class="w-100 shadow-lg col-md-8 col-lg-6 mx-auto">
+
+            <div class="application">
+                <p class="fade-in">Application Form</p>
+            </div>
+
+            <div class="row mb-3">
                 <div class="col">
                     <input type="text" class="form-control" id="exampleFormControlInput1" placeholder="First Name"
                         required>
@@ -76,7 +120,7 @@
                 </div>
             </div>
 
-            <div class="row mb-4">
+            <div class="row mb-3">
                 <div class="col">
                     <input type="email" class="form-control" id="exampleFormControlInput1"
                         placeholder="name@example.com" required>
@@ -87,8 +131,9 @@
                 </div>
             </div>
 
-            <div class="mb-4">
-                <select name="Courses" id="Courses" class="form-select form-control" area-label="Default select example">
+            <div class="mb-3">
+                <select name="Courses" id="Courses" class="form-select form-control"
+                    area-label="Default select example">
                     <option selected>Select</option>
                     <option value="1">C,C++</option>
                     <option value="2">Java</option>
@@ -100,18 +145,19 @@
                     <option value="4">AWS Cloud Services</option>
                 </select>
             </div>
-            <div class="mb-4 form-outline">
+            <div class="mb-3 form-outline">
                 <textarea class="form-control" id="exampleFormControlTextarea1" rows="3"
                     placeholder="Please Write Your Queries"></textarea>
             </div>
 
-            <div class="row mb-4">
+            <div class="row mb-3">
                 <div class="col">
                     <input type="text" class="form-control" id="inputPassedOut" placeholder="Year of Pass">
                 </div>
-                
+
                 <div class="col">
-                    <select name="Stream" id="Courses" class="form-select form-control" area-label="Default select example">
+                    <select name="Stream" id="Courses" class="form-select form-control"
+                        area-label="Default select example">
                         <option selected>Select</option>
                         <option value="1">Computer Science Engineering</option>
                         <option value="2">Mechanical Engineering</option>
