Hello AP , Bye Bye YCP

--- a/index.html
+++ b/index.html
@@ -58,6 +58,7 @@
                             <li><a class="dropdown-item" href="./jobs.html">Jobs</a></li>
                             <li><a class="dropdown-item" href="./internships.html">Internships</a></li>
                             <li><a class="dropdown-item" href="./Technology.html">Technology</a></li>
+                            <li><a class="dropdown-item" href="./investments.html">Investments</a></li>
                         </ul>
                     </li>
                     <li><a class="nav-link scrollto" href="./contact.html">Contact</a></li>
@@ -176,10 +177,10 @@
                                     <a href="./jobs.html"><img src="./images/jobs.png" alt="..." class="img-fluid"></a>
                                 </div>
                             </div>
-                            <h5 class="card-title mt-2 ml-2"><a href="./jobs.html">Jobs</a></h5>
+                            <h5 class="card-title text-center mt-3"><a href="./jobs.html">Jobs</a></h5>
                         </div>
                     </div>
-                    <div class="col-md-12 col-lg-3 mx-auto d-flex">
+                    <div class="col-md-12 col-lg-3 mx-auto d-flex" data-aos="fade-right">
                         <div class="card ">
                             <div class="card-body mx-auto" style="width: 15rem;">
                                 <div class="card-img">
@@ -187,7 +188,7 @@
                                             class="img-fluid" width="200px" height="180px"></a>
                                 </div>
                             </div>
-                            <h5 class="card-title mt-2 ml-5"><a href="./internships.html">Internships</a></h5>
+                            <h5 class="card-title text-center mt-3"><a href="./internships.html">Internships</a></h5>
                         </div>
                     </div>
                     <div class="col-md-12 col-lg-3 mx-auto d-flex" data-aos="fade-left">
@@ -198,7 +199,18 @@
                                             class="img-fluid"></a>
                                 </div>
                             </div>
-                            <h5 class="card-title mt-2 ml-5"><a href="./Technology.html">Technology</a></h5>
+                            <h5 class="card-title text-center mt-3"><a href="./Technology.html">Technology</a></h5>
+                        </div>
+                    </div>
+                    <div class="col-md-12 col-lg-3 mx-auto d-flex" data-aos="fade-left">
+                        <div class="card">
+                            <div class="card-body mx-auto" style="width: 15rem;">
+                                <div class="card-img">
+                                    <a href="./investments.html"><img src="./images/Consultancy.avif" alt="..."
+                                            class="img-fluid"></a>
+                                </div>
+                            </div>
+                            <h5 class="card-title text-center mt-3"><a href="./Technology.html">Investments</a></h5>
                         </div>
                     </div>
                 </div>
