--- a/internships.html
+++ b/internships.html
@@ -44,6 +44,7 @@
                             <li><a class="dropdown-item" href="./jobs.html">Jobs</a></li>
                             <li><a class="dropdown-item" href="#">Internships</a></li>
                             <li><a class="dropdown-item" href="./Technology.html">Technology</a></li>
+                            <li><a class="dropdown-item" href="./investments.html">Investments</a></li>
                         </ul>
                     </li>
                     <li><a href="./contact.html" class="nav-link scrollto">Contact</a></li>
