--- a/jobs.html
+++ b/jobs.html
@@ -45,6 +45,7 @@
                         <li><a class="dropdown-item" href="#">Jobs</a></li>
                         <li><a class="dropdown-item" href="./internships.html">Internships</a></li>
                         <li><a class="dropdown-item" href="./Technology.html">Technology</a></li>
+                        <li><a class="dropdown-item" href="./investments.html">Investments</a></li>
                     </ul>
                 </li>
                     <li><a class="nav-link scrollto" href="./contact.html">Contact</a></li>
