--- a/Enroll.html
+++ b/Enroll.html
@@ -53,6 +53,7 @@
                                 <li><a class="dropdown-item" href="./jobs.html">Jobs</a></li>
                                 <li><a class="dropdown-item" href="./internships.html">Internships</a></li>
                                 <li><a class="dropdown-item" href="./Technology.html">Technology</a></li>
+                                <li><a class="dropdown-item" href="./investments.html">Investments</a></li>
                             </ul>
                         </li>
                         <li><a class="nav-link scrollto" href="#cacontt">Contact</a></li>
