--- a/Technology.html
+++ b/Technology.html
@@ -53,10 +53,12 @@
                             <li><a class="dropdown-item" href="./jobs.html">Jobs</a></li>
                             <li><a class="dropdown-item" href="./internships.html">Internships</a></li>
                             <li><a class="dropdown-item" href="#">Technology</a></li>
+                            <li><a class="dropdown-item" href="./investments.html">Investments</a></li>
                         </ul>
                     </li>
                     <li><a class="nav-link scrollto" href="./contact.html">Contact</a></li>
                     <li><a class="getstarted scrollto" href="#">Get Started</a></li>
+                    
                 </ul>
                 <i class="bi bi-list mobile-nav-toggle"></i>
             </nav>
