--- a/about.html
+++ b/about.html
@@ -45,7 +45,6 @@
                 <ul>
                     <li><a class="nav-link scrollto active" href="./index.html">Home</a></li>
                     <li><a class="nav-link scrollto" href="#">About Us</a></li>
-
                     <li class="nav-item dropdown"><a class="nav-link dropdown-toggle" href="#" role="button"
                             data-bs-toggle="dropdown" aria-expanded="false">
                             Sevices
@@ -65,7 +64,7 @@
         </div>
     </header>
 
-    <section id="about" class="about section-bg">
+    <main id="about" class="about">
         <div class="text-center">
             <h1>About NSS</h1>
         </div>
@@ -107,7 +106,27 @@
                 </div>
             </div>
         </div>
-    </section>
+    </main>
+
+
+    <footer id="footer">
+
+        <div class="footer-top mt-5">
+
+            <div class="container">
+
+                <div class="row justify-content-center">
+                </div>
+
+            </div>
+        </div>
+
+        <div class="container footer-bottom clearfix">
+            <div class="copyright">
+                &copy; Copyright <strong><span>Nithish Software Soluctions Pvt Ltd</span></strong>. All Rights Reserved
+            </div>
+        </div>
+    </footer>
 
     <a href="#" class="back-to-top d-flex align-items-center justify-content-center"><i
             class="bi bi-arrow-up-short"></i></a>
