--- a/internships.html
+++ b/internships.html
@@ -179,6 +179,24 @@
         </form>
     </section>
 
+    <footer id="footer">
+
+        <div class="footer-top">
+
+            <div class="container">
+
+                <div class="row justify-content-center">
+                </div>
+
+            </div>
+        </div>
+
+        <div class="container footer-bottom clearfix">
+            <div class="copyright">
+                &copy; Copyright <strong><span>Nithish Software Soluctions Pvt Ltd</span></strong>. All Rights Reserved
+            </div>
+        </div>
+    </footer>
 </body>
 
 </html>
