--- a/investments.html
+++ b/investments.html
@@ -62,4 +62,8 @@
                 <i class="bi bi-list mobile-nav-toggle"></i>
             </nav>
         </div>
-    </header>
+    </header>   
+    
+
+    </body>
+    </html>
